--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div><label><input type="checkbox" id="settings-combine-messages"/> Mesajları aynı içerikle birleştirin</label></div>
       </div>
       <div>
-        <h3>Mesaj Handling</h3>
+        <h3>Mesaj Özellikleri</h3>
         <div><label><input type="checkbox" id="settings-format-urls"/> URL'leri tıklanabilir bağlantılara dönüştürün</label></div>
         <div><label><input type="checkbox" id="settings-shorten-urls"/> Uzun URL'leri kısaltın </label></div>
         <div>
