--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
   </head>
   <body>
     <div id="curtain" class="hidden">
-      <p>Chat hidden - press Ctrl+Shift+H to reveal</p>
+      <p>Chat Durduruldu -  Ctrl+Shift+H tuşları ile başlatabilir ve durdurabilirsin.</p>
     </div>
-    <div id="settings-wheel" title="Ctrl+Shift+S">⚙ Settings</div>
+    <div id="settings-wheel" title="Ctrl+Shift+S">⚙ Ayarlar</div>
     <div id="fps" class="hidden"></div>
     <div id="settings" class="hidden">
-      <h2>Settings</h2>
+      <h2>Ayarlar</h2>
       <div>
         <h3>Twitch</h3>
-        <div><form action="#"><label>Twitch channel: <input type="text" id="settings-channel" required="required"/></label> <input type="submit" value="Join"/></form></div>
+        <div><form action="#"><label>Twitch Kanalı: <input type="text" id="settings-channel" required="required"/></label> <input type="submit" value="Katıl"/></form></div>
       </div>
       <div>
         <h3>Style</h3>
